--- a/galerie.html
+++ b/galerie.html
@@ -118,7 +118,7 @@
 
   <!-- C. FOOTER AREA -->
   <div class="footer">
-    <p>Copyright &copy; 2011 ERF, Keyar | All Rights Reserved</p>
+    <p>Copyright &copy; 2011 - 2014 ERF, Keyar | All Rights Reserved</p>
     <p class="credits">Design by <a href="http://www.1-2-3-4.info/">Wolfgang</a> | Modified by <a href="http://kijanowski.eu/">Keyar</a> | <a href="http://validator.w3.org/check?uri=referer">XHTML 1.0</a> | <a href="http://jigsaw.w3.org/css-validator/">CSS 2.0</a></p>
   </div>
 </div>
